[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mirroir"
version = "1.0.0"
description = "Fast, interactive file mirror tool for local backups"
requires-python = ">=3.8"
dependencies = [
    "tqdm>=4.0",
    "pathspec>=0.9",
]

[project.scripts]
mirroir = "mirroir:main"

[tool.setuptools]
py-modules = ["mirroir"]
